[tool.poetry]
name = "ucluster"
version = "0.3.2"
description = "Text-based clustering utility"
authors = ["R. Miles McCain <github@sendmiles.email>"]
packages = [
    { include = "ucluster" }
]

[tool.poetry.dependencies]
python = "^3.10"
pybind11 = "^2.11.1"
nltk = "^3.8"
loguru = "^0.7.2"
hdbscan = "^0.8.33"
visidata = "^2.11"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry2conda]
name = "ucluster"
