[project]
name = "ucluster"
version = "1.0.0"
description = "Text-based clustering utility"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "R. Miles McCain", email = "github@sendmiles.email" }]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "nltk>=3.9",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.7",
    "visidata>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ucluster"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
